terms and condition added bookNow button fix form alignment fix removed unwanted jaascript code

--- a/content/themes/karma/styleef15.css
+++ b/content/themes/karma/styleef15.css
@@ -756,7 +756,7 @@ Content
 #content.content_sidebar {
 	float: right;
 	margin: 0 5px 0 0;
-	width: 522px;
+	/* width: 522px; */
 }
 #content.content_sidebar.content_right_sidebar {
 	float: left;
